--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "hbs": "^4.2.0",
+    "multer": "^1.4.5-lts.1",
     "project-website": "file:"
   },
   "devDependencies": {
