--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "hbs": "^4.2.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
-    "project-website": "file:"
+    "project-website": "file:",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sequelize-cli": "^6.6.2"
   }
 }
