--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
